Updated controllers to handle relationships in the database. Added Sessions. Tried a bunch of stuff to get the sessions working. I THINK they might be working, but still not getting user info sent to landing page and pets are not being added because UserId cannot be found. I feel close...yet so far away! Obviously lots of changes!

--- a/petrax-frontend/src/app/landing-page/landing-page.component.html
+++ b/petrax-frontend/src/app/landing-page/landing-page.component.html
@@ -4,11 +4,12 @@
                 <h1>Welcome, UserName</h1>
             </div>
             <div class="profile-link">
-                <h2><a >My Profile</a></h2> 
+                <h2><a >My Profile</a></h2>
         </div>
+      <button *ngIf="isLoggedIn()" (click)="handleLogout()">Logout</button>
 
     <!-- Diplay Links to pet profiles -->
-    <!-- Needs: 
+    <!-- Needs:
     Router links to individual profile for each user
     router link to add new pet page -->
     <div class="pet-card-container">
@@ -24,7 +25,7 @@
     <h4><a  class="pet-card" (click)="openAddPetModal()">Add New Pet!</a></h4>
 
     <!-- Upcoming Events Section
-    Needs: 
+    Needs:
     List upcoming events for a user within a time frame-- if none say "No events to show"
     Link to Calendar at the bottom of the section -->
     <div class="events-container">
@@ -33,7 +34,7 @@
           <ul class="event-list">
             <li *ngFor="let event of events">
                 <span class="event-date">{{ event.start | date }}</span>
-                <span class="event-title">{{ event.title }}</span>  
+                <span class="event-title">{{ event.title }}</span>
             </li>
           </ul>
         </div>
@@ -41,10 +42,9 @@
           <button class="calendar-link" (click)="navigateToCalendar()">Go To Calendar</button>
         </div>
       </div>
-      
+
 
 
     </div>
 </div>
 
-    
