--- a/petrax-frontend/src/app/log-in/log-in.component.html
+++ b/petrax-frontend/src/app/log-in/log-in.component.html
@@ -22,7 +22,7 @@
     <div class="modal-content">
         <h2>Login Successful</h2>
         <p>Welcome to PETRAX! Please click below to continue.</p>
-        <button (click)="navigateToHome()">Calendar</button>
+        <button (click)="navigateToHome()">Welcome</button>
     </div>
 </div>
 
