--- a/petrax-frontend/src/app/register/register.component.html
+++ b/petrax-frontend/src/app/register/register.component.html
@@ -26,7 +26,7 @@
 
                     <div *ngIf="errorMessage" class="error">{{ errorMessage }}</div>
 
-                    <input class="submit-btn" value="Register" [disabled]="!registrationForm.valid">
+                    <button class="submit-btn" value="Register" [disabled]="!registrationForm.valid">Register</button>
                 </div>
             </form>
         </div>
