Added delete feature to calendar. Added recurring dates. Updated modal style to reflect website style.

--- a/petrax-frontend/src/app/calendar/event-detail-modal.component.html
+++ b/petrax-frontend/src/app/calendar/event-detail-modal.component.html
@@ -17,4 +17,4 @@
     <button type="button" class="btn btn-danger" (click)="onDelete()">Delete</button>
     <button type="button" class="btn btn-secondary" (click)="closeModal()">Close</button>
   </div>
-
+</div>
