--- a/petrax-frontend/src/app/calendar/calendar.component.html
+++ b/petrax-frontend/src/app/calendar/calendar.component.html
@@ -8,7 +8,7 @@
       <div class="event-list-container">
         <h2>Upcoming Events</h2>
         <ul>
-          <li *ngFor="let event of events" (click)="openEventDetailModal(event)">
+          <li *ngFor="let event of upcomingEvents" (click)="openEventDetailModal(event)">
             <span class="event-date">{{ event.start | date }}</span>
             <span class="event-title">{{ event.title }}</span>
           </li>
