Whoops-- developed on main. Fixed update-professional.component.ts, added async.

--- a/petrax-frontend/src/app/care-professional/update-professional/update-professional.component.html
+++ b/petrax-frontend/src/app/care-professional/update-professional/update-professional.component.html
@@ -1,4 +1,4 @@
-<div class="col-md-6 offset-md-3">
+<div class="col-md-6 offset-md-3" *ngIf="careProfessional">
     <h3>Update Care Professional</h3>
     <form (ngSubmit)="onSubmit()">
     
