--- a/petrax-frontend/src/app/image-gallery/add-image/add-image.component.html
+++ b/petrax-frontend/src/app/image-gallery/add-image/add-image.component.html
@@ -1,6 +1,8 @@
-<p>add-image works!</p>
-<h1>Add an Image to Your Gallery</h1>
+<div class="modal-body">
+    <h1 class="add-image__title">Add an Image to Your Gallery</h1>
 
-<input type="file" (change)="onFileSelected($event)"/>
-<button (click)="uploadFile()">Upload</button>
+    <input class="add-image__input" type="file" (change)="onFileSelected($event)"/>
+    <button class="add-image__button" (click)="uploadFile()">Upload</button>
+</div>
+
 
