--- a/petrax-frontend/src/app/image-gallery/image-modal/image-modal.component.html
+++ b/petrax-frontend/src/app/image-gallery/image-modal/image-modal.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="modal-items">
     <img [src]="'data:image/jpeg;base64,' + image.data" alt="Image">
-    <button (click)="deleteImage(image.id)">Delete</button>
+    <button (click)="deleteImage(image.id)">Delete This Photo</button>
 </div>
