--- a/petrax-frontend/src/app/landing-page/landing-page.component.html
+++ b/petrax-frontend/src/app/landing-page/landing-page.component.html
@@ -3,10 +3,10 @@
             <div class = "welcome">
                 <h1>Welcome, UserName</h1>
             </div>
-            <div class="profile-link">
+            <!-- <div class="profile-link">
                 <button (click)="navigateToProfile()">My Profile</button>    
                 <button (click)="navigateToProfessionals()">View Care Professionals</button>             
-            </div>
+            </div> -->
         
 
     <!-- Diplay Links to pet profiles -->
